# adkalmanfilter

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindEigen.cmake  FindNLOPT.cmake
include/adkalmanfilter/: adkalmanfilter.h  adkalmanfilter.hpp  outlierrejection_impl.h
include/adkalmanfilter/implementation/: adkalmanfilter_impl.h  adkalmanfilter_impl.hpp  outlierrejection_impl.h  outlierrejection_impl.hpp
src/test/: adkf_test.cpp
test_data/: distance_with_outliers.csv
